--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 # Project exclude paths
 /out/
 .idea
-/data/
+/data/### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
